[gd_scene load_steps=4 format=3 uid="uid://b4qvpxfar22ph"]

[ext_resource type="Script" uid="uid://bv5qi4qweyp4e" path="res://scenes/Main Menu/Load Slot/profile_slot.gd" id="1_a48ov"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a48ov"]
bg_color = Color(0.14117648, 0.23137255, 0.15294118, 1)
border_width_bottom = 35
border_color = Color(0.09019608, 0.15686275, 0.09803922, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id="Theme_18our"]
Panel/styles/panel = SubResource("StyleBoxFlat_a48ov")

[node name="ProfileSlot" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_a48ov")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_18our")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="NameLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Lorenz Bacon"

[node name="LastPlayedLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Time: "

[node name="VBoxContainer2" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 2

[node name="LoadButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer2"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
text = "Play"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer2/LoadButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeleteButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
flat = true

[node name="DeleteIcon" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer2/DeleteButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/MarginContainer/VBoxContainer2/DeleteButton" to="." method="_on_delete_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/MarginContainer/VBoxContainer2/DeleteButton" to="." method="_on_delete_button_mouse_exited"]
